<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/store_name"
        style="?android:listSeparatorTextViewStyle"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/store_host_name"
        style="?android:listSeparatorTextViewStyle"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/store_number"
        style="?android:listSeparatorTextViewStyle"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/store_location"
        style="?android:listSeparatorTextViewStyle"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/store_Date_details_label"
        style="?android:listSeparatorTextViewStyle"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/storeuseddate"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/store_review_title_label"
        style="?android:listSeparatorTextViewStyle"/>
    <EditText
        android:id="@+id/storereviewtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/store_review_title_hint"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/store_review_detail_label"
        style="?android:listSeparatorTextViewStyle"/>
    <EditText
        android:id="@+id/storereviewdetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/store_review_detail_hint"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:height="150dp"
        />

</LinearLayout>