<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <TextView
            android:id="@+id/list_item_store_name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:padding="4dp"
            tools:text="@string/store_name"
            android:textSize="32dp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/list_item_store_number_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/list_item_store_name_text_view"
            android:text="@string/store_number"
            android:padding="4dp"/>
        <TextView
            android:id="@+id/list_item_store_address_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/list_item_store_number_text_view"
            android:text="@string/store_address"
            android:padding="4dp"/>
    </RelativeLayout>

</LinearLayout>